--- a/stlye.css
+++ b/stlye.css
@@ -1,22 +1,24 @@
 .container {
-    display: flex;
+    display: flex;  
+    flex-wrap: wrap;
+    width: 400px;
 }
 
 
 .item{
-    width: 50px;
-    height: 50px;
+    width: 150px;
+    height: 150px;
 }
 
 .green{
-    color: red;
+    color: green;
 }
 
 .yellow{
-    color: white;
+    color: yellow;
 }
 
 .purple{
-    color: green;
+    color: purple;
 }
 
