--- a/stlye.css
+++ b/stlye.css
@@ -1,24 +1,21 @@
-.container {
+ul{
+    list-style-type: none;
+}
+
+
+.container{
     display: flex;  
     flex-wrap: wrap;
     width: 400px;
+    height: 150px;
+    background-color: yellow;
+    padding: 0;
 }
 
 
 .item{
-    width: 150px;
-    height: 150px;
+    width: 50px;
+    height: 50px;
+    background-color: purple;
+    margin-right: 10px;
 }
-
-.green{
-    color: green;
-}
-
-.yellow{
-    color: yellow;
-}
-
-.purple{
-    color: purple;
-}
-
